--- a/quick-start/index.html
+++ b/quick-start/index.html
@@ -5,14 +5,59 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    *{
+      margin:0;
+      padding: 0;
+    }
+    .header{
+      width:100%;
+      height: 50px;
+      background:#000;
+    }
+  </style>
 </head>
 <body>
+  <div class="header"></div>
   <p>hello electron</p>
 
-  <script>
-    const path = require('path')
+  <button class="btn">点击</button>
 
-    console.log(path.resolve('root','resource'))
+  <script>
+    const { ipcRenderer } = require('electron')
+
+    document.querySelector('.btn').addEventListener('click',function(){
+      ipcRenderer.send('renderer-send','渲染进程传递过来的')
+    })
+
+    ipcRenderer.on('main-send',(event,data) => {
+      console.log(data)
+    })
+
+    const header = document.querySelector('.header')
+    let isDown = false;
+    let baseX = 0,baseY = 0;
+    header.addEventListener('mousedown',function(e){
+      isDown = true 
+      baseX = e.x
+      baseY = e.y
+    })
+
+    document.addEventListener('mousemove',function(e){
+      if(isDown){
+        const x = e.screenX - baseX
+        const y = e.screenY - baseY
+
+        ipcRenderer.send('move-application',{
+          posX:x,
+          posY:y
+        })
+      }
+    })
+
+    document.addEventListener('mouseup',function(){
+      isDown = false
+    })
   </script>
 </body>
 </html>
